force-app/main/default/objects/CJFW_ModuleSetting__c/CJFW_ModuleSetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>공통 모듈 Setting
1.전체 Trigger Handler On/Off 설정 (사용자, 프로필, Org)</description>
    <label>[CJFW] Module Setting</label>
</CustomObject>