force-app/main/default/objects/CJFW_ModuleSetting__c/fields/IsNotiTest__c.field-meta.xml
<CustomField>
    <fullName>IsNotiTest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>알림 모듈 테스트용 활성화 여부(true: 히스토리 데이터 적재, false: 실제알림 발송 및 히스토리 적재)</description>
    <label>IsNotiTest</label>
    <type>Checkbox</type>
</CustomField>