force-app/main/default/objects/CJFW_ModuleSetting__c/fields/IsTriggerActive__c.field-meta.xml
<CustomField>
    <fullName>IsTriggerActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Trigger 활성/비활성화</description>
    <label>IsTriggerActive</label>
    <type>Checkbox</type>
</CustomField>