force-app/main/default/objects/CJFW_ModuleSetting__c/fields/SystemEmailWhatId__c.field-meta.xml
<CustomField>
    <fullName>SystemEmailWhatId__c</fullName>
    <description>System 에서 템플릿 개인화 할때 필요한 ContactId
System 용으로 보냈을 경우 EmailMessage 에 기록 됨</description>
    <label>System Email WhatId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>